--- a/usr/share/aat/Translations/it.po
+++ b/usr/share/aat/Translations/it.po
@@ -218,16 +218,16 @@ msgid "_DASHBOARD"
 msgstr "Dashboard"
 
 msgid "_DATASOURCE"
-msgstr "_DATASOURCE"
+msgstr "§DATASOURCE§"
 
 msgid "_DATASOURCES"
-msgstr "_DATASOURCES"
+msgstr "§DATASOURCES§"
 
 msgid "_DATASOURCE_VALUE"
-msgstr "_DATASOURCE_VALUE"
+msgstr "§DATASOURCE_VALUE§"
 
 msgid "_DATASOURCES_VALUE"
-msgstr "_DATASOURCES_VALUE"
+msgstr "§DATASOURCES_VALUE§"
 
 msgid "_DELETE"
 msgstr "Elimina"
@@ -251,7 +251,7 @@ msgid "_HELP"
 msgstr "Aiuto"
 
 msgid "_HOMEPAGE"
-msgstr "_HOMEPAGE"
+msgstr "§HOMEPAGE§"
 
 msgid "_HOST"
 msgstr "Host"
@@ -263,13 +263,13 @@ msgid "_ICONS_ONLY"
 msgstr "Solo icone"
 
 msgid "_INFORMATION"
-msgstr "_INFORMATION"
+msgstr "§INFORMATION§"
 
 msgid "_KEY"
 msgstr "Chiave"
 
 msgid "_LABEL"
-msgstr "_LABEL"
+msgstr "§LABEL§"
 
 msgid "_LOGOUT"
 msgstr "Esci"
@@ -278,7 +278,7 @@ msgid "_MENU_DISPLAY"
 msgstr "Mostra menu"
 
 msgid "_MODIFICATION"
-msgstr "_MODIFICATION"
+msgstr "§MODIFICATION§"
 
 msgid "_MODIFY"
 msgstr "Modifica"
@@ -335,7 +335,7 @@ msgid "_USER"
 msgstr "Utente"
 
 msgid "_USER_EDIT"
-msgstr "_USER_EDIT"
+msgstr "§USER_EDIT§"
 
 msgid "_USERS"
 msgstr "Utenti"
@@ -419,7 +419,7 @@ msgid "_NB"
 msgstr "Nb"
 
 msgid "_NB_ITEMS"
-msgstr "_NB_ITEMS"
+msgstr "§NB_ITEMS§"
 
 msgid "_NEW_PASSWORD"
 msgstr "Nuova Password"
@@ -506,10 +506,10 @@ msgid "_ALERTS_VIEWER"
 msgstr "Visualizzatore allarmi"
 
 msgid "_AUTHENTICATION"
-msgstr "_AUTHENTICATION"
+msgstr "§AUTHENTICATION§"
 
 msgid "_BACK"
-msgstr "_BACK"
+msgstr "§BACK§"
 
 msgid "_BASE"
 msgstr "Base"
@@ -521,19 +521,19 @@ msgid "_CITY"
 msgstr "Città"
 
 msgid "_COMPONENT_NAME"
-msgstr "_COMPONENT_NAME"
+msgstr "§COMPONENT_NAME§"
 
 msgid "_CONNECTION_TYPE"
-msgstr "_CONNECTION_TYPE"
+msgstr "§CONNECTION_TYPE§"
 
 msgid "_CONTACTS"
 msgstr "Contatti"
 
 msgid "_CONTACTS_AUTH_DN"
-msgstr "_CONTACTS_AUTH_DN"
+msgstr "§CONTACTS_AUTH_DN§"
 
 msgid "_CONTACTS_AUTH_PASSWORD"
-msgstr "_CONTACTS_AUTH_PASSWORD"
+msgstr "§CONTACTS_AUTH_PASSWORD§"
 
 msgid "_CONTACTS_BASE"
 msgstr "Base contatti"
@@ -626,7 +626,7 @@ msgid "_GRAPH_WIDTH"
 msgstr "Larghezza del grafico"
 
 msgid "_GRAPH_Y_LABEL"
-msgstr "_GRAPH_Y_LABEL"
+msgstr "§GRAPH_Y_LABEL§"
 
 msgid "_GROUP_NAME"
 msgstr "Nome gruppo"
@@ -662,7 +662,7 @@ msgid "_LOG_LEVEL"
 msgstr "Livello di log"
 
 msgid "_LOG_REGEXP"
-msgstr "_LOG_REGEXP"
+msgstr "§LOG_REGEXP§"
 
 msgid "_LOG_TYPE"
 msgstr "Tipo di log"
@@ -671,7 +671,7 @@ msgid "_LOGROTATE"
 msgstr "Rotazione log"
 
 msgid "_LOGS_AVAILABILITY"
-msgstr "_Logs Availability"
+msgstr "§Logs Availability§"
 
 msgid "_LOGS_VIEWER"
 msgstr "Visualizza log"
@@ -686,7 +686,7 @@ msgid "_MATCH"
 msgstr "Corrispondenza"
 
 msgid "_MAX_MINUTES_SEARCH"
-msgstr "_MAX. number of minutes to search"
+msgstr "§MAX. number of minutes to search§"
 
 msgid "_MAX_TIME_WITHOUT_LOG"
 msgstr "Massimo periodo zenza log"
@@ -716,7 +716,7 @@ msgid "_NB_REPORTS"
 msgstr "Nb Reports"
 
 msgid "_NEGATE"
-msgstr "_NEGATE"
+msgstr "§NEGATE§"
 
 msgid "_NEW_ALERT"
 msgstr "Nuovo Allarme"
@@ -764,7 +764,7 @@ msgid "_NEW_SERVICEGROUP"
 msgstr "Nuovo Gruppo Servizi"
 
 msgid "_NEW_STATIC_ALERT"
-msgstr "_NEW_STATIC_ALERT"
+msgstr "§NEW_STATIC_ALERT§"
 
 msgid "_NEW_STATIC_DEVICEGROUP"
 msgstr "Nuovo Gruppo apparati statico"
@@ -812,7 +812,7 @@ msgid "_PERIODS"
 msgstr "Periodi"
 
 msgid "_PERL_FUNCTION"
-msgstr "_PERL_FUNCTION"
+msgstr "§PERL_FUNCTION§"
 
 msgid "_PROCESSOR"
 msgstr "Processore"
@@ -827,7 +827,7 @@ msgid "_RANK"
 msgstr "Rank"
 
 msgid "_REAL_TIME_LOGS_VIEWER"
-msgstr "_REAL_TIME_LOGS_VIEWER"
+msgstr "§REAL_TIME_LOGS_VIEWER§"
 
 msgid "_REGEXP_EXC"
 msgstr "Regexp (Excl.)"
@@ -869,28 +869,28 @@ msgid "_REPORT_FIELDS_ORDER"
 msgstr "Ordine campi Report"
 
 msgid "_REPORT_FILE_DOESNT_EXIST"
-msgstr "_REPORT_FILE_DOESNT_EXIST"
+msgstr "§REPORT_FILE_DOESNT_EXIST§"
 
 msgid "_REPORT_HTML"
 msgstr "HTML Format Report"
 
 msgid "_REPORT_IN_PROGRESS"
-msgstr "_REPORT_IN_PROGRESS"
+msgstr "§REPORT_IN_PROGRESS§"
 
 msgid "_REPORT_NAME"
 msgstr "Nome Report"
 
 msgid "_REPORT_OFC"
-msgstr "_REPORT_OFC"
+msgstr "§REPORT_OFC§"
 
 msgid "_REPORT_PDF"
 msgstr "PDF Format Report"
 
 msgid "_REPORT_RRD_GRAPH"
-msgstr "_REPORT_RRD_GRAPH"
+msgstr "§REPORT_RRD_GRAPH§"
 
 msgid "_REPORT_RRD_GRAPH_CREATION"
-msgstr "_REPORT_RRD_GRAPH_CREATION"
+msgstr "§REPORT_RRD_GRAPH_CREATION§"
 
 msgid "_REPORT_SCHEDULER"
 msgstr "Report Scheduler"
@@ -917,10 +917,10 @@ msgid "_ROOM"
 msgstr "Stanza"
 
 msgid "_ROTATE_LEFT"
-msgstr "_ROTATE_LEFT"
+msgstr "§ROTATE_LEFT§"
 
 msgid "_ROTATE_RIGHT"
-msgstr "_ROTATE_RIGHT"
+msgstr "§ROTATE_RIGHT§"
 
 msgid "_RUNNING_REPORTS"
 msgstr "Report attivi"
@@ -935,7 +935,7 @@ msgid "_SCHEDULE_REPORT"
 msgstr "Report pianificazione"
 
 msgid "_SCHEDULE_STATISTIC_REPORT"
-msgstr "_SCHEDULE_STATISTIC_REPORT"
+msgstr "§SCHEDULE_STATISTIC_REPORT§"
 
 msgid "_SCHEDULER"
 msgstr "Pianificatore"
@@ -971,10 +971,10 @@ msgid "_SERVICES_UPDATES"
 msgstr "Aggiornamenti servizi"
 
 msgid "_SOURCE"
-msgstr "_SOURCE"
+msgstr "§SOURCE§"
 
 msgid "_SHOW_DIFF"
-msgstr "_SHOW_DIFF"
+msgstr "§SHOW_DIFF§"
 
 msgid "_START"
 msgstr "Inizia"
@@ -992,16 +992,16 @@ msgid "_STATIC"
 msgstr "Statico"
 
 msgid "_STATIC_ALERT_CONFIGURATION"
-msgstr "_STATIC_ALERT_CONFIGURATION"
+msgstr "§STATIC_ALERT_CONFIGURATION§"
 
 msgid "_STATISTICS"
-msgstr "_STATISTICS"
+msgstr "§STATISTICS§"
 
 msgid "_STATISTIC_REPORT_EDITION"
-msgstr "_STATISTIC_REPORT_EDITION"
+msgstr "§STATISTIC_REPORT_EDITION§"
 
 msgid "_STATISTIC_REPORT_SCHEDULER"
-msgstr "_STATISTIC_REPORT_SCHEDULER"
+msgstr "§STATISTIC_REPORT_SCHEDULER§"
 
 msgid "_STATISTIC_REPORTS"
 msgstr "Statistiche"
@@ -1019,7 +1019,7 @@ msgid "_SWAP_USAGE"
 msgstr "Uso swap"
 
 msgid "_SYSLOG_OUTPUT"
-msgstr "_SYSLOG_OUTPUT"
+msgstr "§SYSLOG_OUTPUT§"
 
 msgid "_SYSTEM_CONFIG"
 msgstr "Configurazione sistema"
@@ -1052,7 +1052,7 @@ msgid "_TICKET_WORK_PROGRESS"
 msgstr "in lavorazione"
 
 msgid "_TIMELINE"
-msgstr "_TIMELINE"
+msgstr "§TIMELINE§"
 
 msgid "_TIMEPERIOD"
 msgstr "Periodo temporale"
@@ -1064,16 +1064,16 @@ msgid "_TIMEPERIODS"
 msgstr "periodo temporale"
 
 msgid "_TIMESTEP"
-msgstr "_TIMESTEP"
+msgstr "§TIMESTEP§"
 
 msgid "_UNKNOWN_MSGS"
 msgstr "Messaggio sconosciuto"
 
 msgid "_USERS_AUTH_DN"
-msgstr "_USERS_AUTH_DN"
+msgstr "§USERS_AUTH_DN§"
 
 msgid "_USERS_AUTH_PASSWORD"
-msgstr "_USERS_AUTH_PASSWORD"
+msgstr "§USERS_AUTH_PASSWORD§"
 
 msgid "_USERS_BASE"
 msgstr "Base utenti"
@@ -1088,19 +1088,19 @@ msgid "_WORLD_STATISTICS"
 msgstr "Statistiche totali"
 
 msgid "_ZABBIX_HOST_DEFINED"
-msgstr "_ZABBIX_HOST_DEFINED"
+msgstr "§ZABBIX_HOST_DEFINED§"
 
 msgid "_ZABBIX_SERVER"
-msgstr "_ZABBIX_SERVER"
+msgstr "§ZABBIX_SERVER§"
 
 msgid "_ZABBIX_ITEM_DEFINED"
-msgstr "_ZABBIX_ITEM_DEFINED"
+msgstr "§ZABBIX_ITEM_DEFINED§"
 
 msgid "_ZOOM_IN"
-msgstr "_ZOOM_IN"
+msgstr "§ZOOM_IN§"
 
 msgid "_ZOOM_OUT"
-msgstr "_ZOOM_OUT"
+msgstr "§ZOOM_OUT§"
 
 msgid "_DLG_DELETE_ALERT"
 msgstr "Vuoi rimuovere realmente l'allarme '%%arg1%%' ?"
@@ -1214,16 +1214,16 @@ msgid "_MSG_CONTACT_ME"
 msgstr "per qualsiasi problema, contattatemi quiç octo.devel@gmail.com"
 
 msgid "_MSG_DEVICEGROUP_ALREADY_EXISTS"
-msgstr "_MSG_DEVICEGROUP_ALREADY_EXISTS"
+msgstr "§MSG_DEVICEGROUP_ALREADY_EXISTS§"
 
 msgid "_MSG_DYNAMIC_ALERT_CREATION"
 msgstr "Creazione allarme dinamico"
 
 msgid "_MSG_EXTRACT_PROGRESS_DATA"
-msgstr "_MSG_EXTRACT_PROGRESS_DATA"
+msgstr "§MSG_EXTRACT_PROGRESS_DATA§"
 
 msgid "_MSG_EXTRACT_PROGRESS_LISTING_FILES"
-msgstr "_MSG_EXTRACT_PROGRESS_LISTING_FILES"
+msgstr "§MSG_EXTRACT_PROGRESS_LISTING_FILES§"
 
 msgid "_MSG_FIELD_DONT_EXIST"
 msgstr "Campo inesistente !"
@@ -1235,7 +1235,7 @@ msgid "_MSG_INVALID_SCHEDULE_PERIOD"
 msgstr "Hai scelto un periodo errato per questa pianificazione!"
 
 msgid "_MSG_LOGS_AVAILABILITY_FOR_DEVICE"
-msgstr "__LOGS availability for device %s"
+msgstr "§_LOGS availability for device %s§"
 
 msgid "_MSG_MAIL_SENT_TO_SUPPORT"
 msgstr "Mail spedita al supporto Octopussy."
@@ -1247,7 +1247,7 @@ msgid "_MSG_MSGID_ALREADY_EXISTS"
 msgstr "ID messaggio già presente!"
 
 msgid "_MSG_MSGID_CANT_BE_NULL"
-msgstr "_MSG_MSGID_CANT_BE_NULL"
+msgstr "§MSG_MSGID_CANT_BE_NULL§"
 
 msgid "_MSG_MSGS_FOR_SERVICE"
 msgstr "Messaggi per il servizio %s (versione %s)"
@@ -1304,7 +1304,7 @@ msgid "_MSG_REPORT_PROGRESS_QUERYING_DB"
 msgstr "Interrogazione Database..."
 
 msgid "_MSG_REPORT_PROGRESS_REPORT_CONFIG"
-msgstr "_MSG_REPORT_PROGRESS_REPORT_CONFIG"
+msgstr "§MSG_REPORT_PROGRESS_REPORT_CONFIG§"
 
 msgid "_MSG_RESTART_OCTOPUSSY"
 msgstr "Riavvia Octopussy"
@@ -1364,7 +1364,7 @@ msgid "_MSG_USER_ALREADY_EXISTS"
 msgstr "Utente già presente!"
 
 msgid "_MSG_USER_CAN_ONLY_VIEW_N_MINUTES_LOGS"
-msgstr "_YOUR user can only view %d minutes of logs"
+msgstr "§YOUR user can only view %d minutes of logs§"
 
 msgid "_MSG_WIZARD_MSGS_LIST_LIMITED_TO"
 msgstr "Lista messaggi tramite Wizard limitata a %d di default."
@@ -1394,4 +1394,4 @@ msgid "_TOOLTIP_SYSTEM_SMTP"
 msgstr "SMTP viene usato per mandare allarmi e report ai contatti o per contattare il supporto Octopyssy.<br> <b>Server:</b> (<i>yoursmtp.yourdomain.com</i>)<br> <b>Mittente:</b> (<i>you@yourdomain.com</i>)<br>"
 
 msgid "_TOOLTIP_SYSTEM_ZABBIX"
-msgstr "_TOOLTIP_SYSTEM_ZABBIX"
+msgstr "§TOOLTIP_SYSTEM_ZABBIX§"
