--- a/usr/share/aat/Translations/es.po
+++ b/usr/share/aat/Translations/es.po
@@ -928,6 +928,12 @@ msgstr "Ejecutando informes"
 msgid "_SAVE_AS_SEARCH_TEMPLATE"
 msgstr "Guardar la busqueda como plantilla"
 
+msgid "_SAVE_MSG_GO_BACK_TO_WIZARD"
+msgstr "§SAVE_MSG_GO_BACK_TO_WIZARD§"
+
+msgid "_SAVE_MSG_GO_TO_SERVICE"
+msgstr "§SAVE_MSG_GO_TO_SERVICE§"
+
 msgid "_SCHEDULE"
 msgstr "Planificar"
 
