--- a/usr/share/aat/Translations/pt.po
+++ b/usr/share/aat/Translations/pt.po
@@ -928,6 +928,12 @@ msgstr "Relatorios em Execucao"
 msgid "_SAVE_AS_SEARCH_TEMPLATE"
 msgstr "Salvar Como um Modelo para Busca"
 
+msgid "_SAVE_MSG_GO_BACK_TO_WIZARD"
+msgstr "§SAVE_MSG_GO_BACK_TO_WIZARD§"
+
+msgid "_SAVE_MSG_GO_TO_SERVICE"
+msgstr "§SAVE_MSG_GO_TO_SERVICE§"
+
 msgid "_SCHEDULE"
 msgstr "Agendar"
 
