Feature Request #3428757 (Part 2): You can now enable/disable logs compression in 'Device Services' web page

--- a/usr/share/aat/Translations/es.po
+++ b/usr/share/aat/Translations/es.po
@@ -673,6 +673,9 @@ msgstr "Rotado de Logs"
 msgid "_LOGS_AVAILABILITY"
 msgstr "§Logs Availability§"
 
+msgid "_LOGS_COMPRESSION"
+msgstr "§LOGS_COMPRESSION§"
+
 msgid "_LOGS_VIEWER"
 msgstr "Visor de Logs"
 
