--- a/usr/share/aat/Translations/pt.po
+++ b/usr/share/aat/Translations/pt.po
@@ -673,6 +673,9 @@ msgstr "Logrotate"
 msgid "_LOGS_AVAILABILITY"
 msgstr "§Logs Availability§"
 
+msgid "_LOGS_COMPRESSION"
+msgstr "§LOGS_COMPRESSION§"
+
 msgid "_LOGS_VIEWER"
 msgstr "Visualizador de Logs"
 
