--- a/usr/share/aat/Translations/de.po
+++ b/usr/share/aat/Translations/de.po
@@ -673,6 +673,9 @@ msgstr "§LOGROTATE§"
 msgid "_LOGS_AVAILABILITY"
 msgstr "§Logs Availability§"
 
+msgid "_LOGS_COMPRESSION"
+msgstr "§LOGS_COMPRESSION§"
+
 msgid "_LOGS_VIEWER"
 msgstr "Anzeige Logs"
 
