--- a/usr/share/aat/Translations/en.po
+++ b/usr/share/aat/Translations/en.po
@@ -673,6 +673,9 @@ msgstr "Logrotate"
 msgid "_LOGS_AVAILABILITY"
 msgstr "Logs Availability"
 
+msgid "_LOGS_COMPRESSION"
+msgstr "Logs Compression"
+
 msgid "_LOGS_VIEWER"
 msgstr "Logs Viewer"
 
