--- a/usr/share/aat/Translations/ru.po
+++ b/usr/share/aat/Translations/ru.po
@@ -673,6 +673,9 @@ msgstr "Вращение лога"
 msgid "_LOGS_AVAILABILITY"
 msgstr "§Logs Availability§"
 
+msgid "_LOGS_COMPRESSION"
+msgstr "§LOGS_COMPRESSION§"
+
 msgid "_LOGS_VIEWER"
 msgstr "Просмотр логов"
 
