Feature Request #3416032 (2/2): 'Delete from Database' button added to 'Alerts Viewer' page

--- a/usr/share/aat/Translations/en.po
+++ b/usr/share/aat/Translations/en.po
@@ -232,6 +232,9 @@ msgstr "Datasources Value"
 msgid "_DELETE"
 msgstr "Delete"
 
+msgid "_DELETE_FROM_DB"
+msgstr "Delete from Database"
+
 msgid "_DIRECTORY"
 msgstr "Directory"
 
