Feature Request #3416018: Now, you can set mimimum delay between 2 alerts

--- a/usr/share/aat/Translations/de.po
+++ b/usr/share/aat/Translations/de.po
@@ -703,6 +703,9 @@ msgstr "Speicherauslastung"
 msgid "_MESSAGES"
 msgstr "Meldungen"
 
+msgid "_MINIMUM_DELAY_BETWEEN_2_ALERTS"
+msgstr "§MINIMUM_DELAY_BETWEEN_2_ALERTS§"
+
 msgid "_MSG_ID"
 msgstr "§MSG_ID§"
 
