--- a/usr/share/aat/Translations/de.po
+++ b/usr/share/aat/Translations/de.po
@@ -1289,7 +1289,7 @@ msgid "_MSG_NO_UPDATES_AVAILABLE"
 msgstr "Keine Updates verfuegbar !"
 
 msgid "_MSG_OK_TO_SEND_DATA_TO_8PUSSY"
-msgstr "§_I'm OK to send anonymous data to 8pussy.org__§"
+msgstr "§_I'm OK to send anonymous data to octopussy.pm__§"
 
 msgid "_MSG_REACH_MAX_LINES"
 msgstr "§MSG_REACH_MAX_LINES: §"
