--- a/usr/share/aat/Translations/es.po
+++ b/usr/share/aat/Translations/es.po
@@ -1289,7 +1289,7 @@ msgid "_MSG_NO_UPDATES_AVAILABLE"
 msgstr "No hay Actualizaciones disponibles"
 
 msgid "_MSG_OK_TO_SEND_DATA_TO_8PUSSY"
-msgstr "Estoy preparado para enviar información anonima a 8pussy.org"
+msgstr "Estoy preparado para enviar información anonima a octopussy.pm"
 
 msgid "_MSG_REACH_MAX_LINES"
 msgstr "Maximo de %d lineas alcanzado!"
