--- a/usr/share/aat/Translations/fr.po
+++ b/usr/share/aat/Translations/fr.po
@@ -1289,7 +1289,7 @@ msgid "_MSG_NO_UPDATES_AVAILABLE"
 msgstr "Pas de Mise à Jour Disponible"
 
 msgid "_MSG_OK_TO_SEND_DATA_TO_8PUSSY"
-msgstr "Je suis d'accord pour envoyer des données anonymes à 8pussy.org"
+msgstr "Je suis d'accord pour envoyer des données anonymes à octopussy.pm"
 
 msgid "_MSG_REACH_MAX_LINES"
 msgstr "Maximum de %d lignes atteint!"
