--- a/usr/share/aat/Translations/it.po
+++ b/usr/share/aat/Translations/it.po
@@ -1289,7 +1289,7 @@ msgid "_MSG_NO_UPDATES_AVAILABLE"
 msgstr "Nessun aggiornamento disponibile"
 
 msgid "_MSG_OK_TO_SEND_DATA_TO_8PUSSY"
-msgstr "Confermo la spedizione dei dati in forma anonima a 8pussy.org"
+msgstr "Confermo la spedizione dei dati in forma anonima a octopussy.pm"
 
 msgid "_MSG_REACH_MAX_LINES"
 msgstr "Raggiunto il numero massimo di righe (%d) !"
