--- a/changelog
+++ b/changelog
@@ -1,3 +1,20 @@
+octopussy (1.0.6) stable; urgency=high
+
+  * octo_tool program updated to handle backups
+  * References to 8pussy.org have been replaced by octopussy.pm
+  * Services & Tables updates
+  * Feature Request #3538049: Ability to change banner image
+  * Feature Request #3560370: Move and copy of patterns between Services
+  * Feature Request #3510112: Now LDAP Users have the same preferences/roles 
+    than local users
+  * Bugfixes for LDAP Contacts & Users
+  * Bugfix Loglevel/Taxonomy unknown parameter for octo_extractor
+  * Bugfix #3541753: Removes RRD error messages
+  * Bugfix #3519341: msgid & taxo stats not in cache anymore when stats 
+    are disabled
+
+ -- Sebastien Thebert <octo.devel@gmail.com>  Mon, 25 Jun 2012 01:00:00 +0100
+
 octopussy (1.0.5) stable; urgency=high
 
   * Bugfix #3537131: Problem with Device with only ip address after 
@@ -5,7 +22,6 @@ octopussy (1.0.5) stable; urgency=high
   * Updates on 'Valid_Name' functions and Test Suite
 
  -- Sebastien Thebert <octo.devel@gmail.com>  Mon, 25 Jun 2012 01:00:00 +0100
-
 
 octopussy (1.0.4) stable; urgency=high
 
