--- a/usr/share/aat/Translations/en.po
+++ b/usr/share/aat/Translations/en.po
@@ -541,6 +541,9 @@ msgstr "Contacts Auth. Password"
 msgid "_CONTACTS_BASE"
 msgstr "Contacts Base"
 
+msgid "_CONTACTS_FIELDS"
+msgstr "Contacts Fields"
+
 msgid "_CONTACTS_FILTER"
 msgstr "Contacts Filter"
 
@@ -1289,7 +1292,7 @@ msgid "_MSG_NO_UPDATES_AVAILABLE"
 msgstr "No Updates Available"
 
 msgid "_MSG_OK_TO_SEND_DATA_TO_8PUSSY"
-msgstr "I'm OK to send anonymous data to octopussy.pm"
+msgstr "I'm OK to send anonymous data to 8pussy.org"
 
 msgid "_MSG_REACH_MAX_LINES"
 msgstr "Maximum of %d lines reached!"
