--- a/usr/share/aat/Translations/es.po
+++ b/usr/share/aat/Translations/es.po
@@ -541,6 +541,9 @@ msgstr "§CONTACTS_AUTH_PASSWORD§"
 msgid "_CONTACTS_BASE"
 msgstr "Base de Contactos"
 
+msgid "_CONTACTS_FIELDS"
+msgstr "§CONTACTS_FIELDS§"
+
 msgid "_CONTACTS_FILTER"
 msgstr "Filtro de Contactos"
 
@@ -1289,7 +1292,7 @@ msgid "_MSG_NO_UPDATES_AVAILABLE"
 msgstr "No hay Actualizaciones disponibles"
 
 msgid "_MSG_OK_TO_SEND_DATA_TO_8PUSSY"
-msgstr "Estoy preparado para enviar información anonima a octopussy.pm"
+msgstr "Estoy preparado para enviar información anonima a 8pussy.org"
 
 msgid "_MSG_REACH_MAX_LINES"
 msgstr "Maximo de %d lineas alcanzado!"
