--- a/changelog
+++ b/changelog
@@ -1,3 +1,16 @@
+octopussy (1.0.9) stable; urgency=high
+
+  * Bugfix #347: Cannot create messages for logs with bad mail dir
+  * Bugfix #353: Problem running reports on more than one device
+  * Bugfixing log compression issues
+  * Bugfixing Web Interface issues reported on Google+
+  * Minor bugfixes on octo_parser and Octopussy::Alert
+  * Fixing major security issues in Web interface
+  * Improving Web Interface
+  * Invalid Devicename are not created anymore by octo_dispatcher
+
+ -- Sebastien Thebert <octo.devel@gmail.com>  Fri, 24 May 2013 00:30:00 +0100
+
 octopussy (1.0.8) stable; urgency=high
 
   * Bugfix #314: Fixing the LDAP Users authentication
