Turkish translation added

--- a/usr/share/aat/Translations/en.po
+++ b/usr/share/aat/Translations/en.po
@@ -19,6 +19,9 @@ msgstr "Russian"
 msgid "_SPANISH"
 msgstr "Spanish"
 
+msgid "_TURKISH"
+msgstr "Turkish"
+
 msgid "_DISABLED"
 msgstr "Disabled"
 
