--- a/usr/share/aat/Translations/de.po
+++ b/usr/share/aat/Translations/de.po
@@ -19,6 +19,9 @@ msgstr "§RUSSIAN§"
 msgid "_SPANISH"
 msgstr "Spanish"
 
+msgid "_TURKISH"
+msgstr "§TURKISH§"
+
 msgid "_DISABLED"
 msgstr "§DISABLED§"
 
