--- a/usr/share/aat/Translations/pt.po
+++ b/usr/share/aat/Translations/pt.po
@@ -19,6 +19,9 @@ msgstr "Russo"
 msgid "_SPANISH"
 msgstr "Spanish"
 
+msgid "_TURKISH"
+msgstr "§TURKISH§"
+
 msgid "_DISABLED"
 msgstr "Desabilitado"
 
